hphp/test/quick/nullsafe-prop-not-allowed.php.expectf
Fatal error: ?-> is not supported for property access in %s on line 6
